added styles to header and create component in sass and created mixin buttons

--- a/index.html
+++ b/index.html
@@ -35,14 +35,18 @@
 
 </div>
 </nav>
-  <header>
-<h1>Next generation digital banking </h1>
+  <header class="main-banner">
+<div class="main-banner__general">
+  <h1 class="main-banner__header">Next generation digital banking </h1>
 
- <p> Take your financial life online. Your Easybank account will be a one-stop-shop
+ <p class="main-banner__text"> Take your financial life online. Your Easybank account will be a one-stop-shop
   for spending, saving, budgeting, investing, and much more. </p>
 
- <button>Request Invite</button>
-<img src="images/image-mockups.png" alt="">
+ <button class="main-banner__button" >Request Invite</button>
+</div>
+<div class="main-banner__photo">
+  <img  class="main-banner__photo-item" src="images/image-mockups.png" alt="">
+</div>
   </header>
 
 
