--- a/index.html
+++ b/index.html
@@ -50,28 +50,38 @@
   </header>
 
 
- <section>
- <h2> Why choose Easybank? </h2>
+ <section class="why-section">
+ <h2 class="why-section__header"> Why choose Easybank? </h2>
 
- <p> We leverage Open Banking to turn your bank account into your financial hub. Control
+ <p class="why-section__text"> We leverage Open Banking to turn your bank account into your financial hub. Control
   your finances like never before.</p>
 
-<img src="images/icon-online.svg" alt="online">
-  <h3>Online Banking</h3>
-  <p>Our modern web and mobile applications allow you to keep track of your finances
-  wherever you are in the world.</p>
-<img src="images/icon-budgeting.svg" alt="budgeting">
-  <h3>Simple Budgeting</h3>
-  <p>See exactly where your money goes each month. Receive notifications when you’re
-    close to hitting your limits.</p>
-<img src="images/icon-onboarding.svg" alt="onboarding">
-  <h3>Fast Onboarding</h3>
-  <p>We don’t do branches. Open your account in minutes online and start taking control
-    of your finances right away.</p>
-<img src="images/icon-api.svg" alt="api">
-  <h3>Open API</h3>
-  <p>Manage your savings, investments, pension, and much more from one account. Tracking
-    your money has never been easier.</p>
+<div class="why-reason">
+  <div class="why-reason__item">
+    <img class="why-reason__image"src="images/icon-online.svg" alt="online">
+    <h3 class="why-reason__header">Online Banking</h3>
+    <p class="why-reason__text">Our modern web and mobile applications allow you to keep track of your finances
+    wherever you are in the world.</p>
+  </div>
+  <div class="why-reason__item">
+    <img class="why-reason__image" src="images/icon-budgeting.svg" alt="budgeting">
+    <h3 class="why-reason__header">Simple Budgeting</h3>
+    <p class="why-reason__text">See exactly where your money goes each month. Receive notifications when you’re
+      close to hitting your limits.</p>
+  </div>
+  <div class="why-reason__item">
+    <img class="why-reason__image" src="images/icon-onboarding.svg" alt="onboarding">
+    <h3 class="why-reason__header">Fast Onboarding</h3>
+    <p class="why-reason__text">We don’t do branches. Open your account in minutes online and start taking control
+      of your finances right away.</p>
+  </div>
+  <div class="why-reason__item">
+    <img class="why-reason__image" src="images/icon-api.svg" alt="api">
+    <h3 class="why-reason__header">Open API</h3>
+    <p class="why-reason__text">Manage your savings, investments, pension, and much more from one account. Tracking
+      your money has never been easier.</p>
+  </div>
+</div>
  </section>
 
 
