--- a/index.html
+++ b/index.html
@@ -85,63 +85,77 @@
  </section>
 
 
-
-  <h2>Latest Articles</h2>
-<img src="images/image-currency.jpg" alt="currency">
-  <small>By Claire Robinson</small>
- <h4> Receive money in any currency with no fees</h4>
- <p> The world is getting smaller and we’re becoming more mobile. So why should you be
-  forced to only receive money in a single …</p>
-  <img src="images/image-restaurant.jpg" alt="restaurant">
-  <small>By Wilson Hutton</small>
-  <h4>Treat yourself without worrying about money</h4>
-<p>Our simple budgeting feature allows you to separate out
-  your spending and set realistic limits each month. That
-  means you …</p>
-<img src="images/image-plane.jpg" alt="plane">
-  <small>By Wilson Hutton</small>
-  <h4>Take your Easybank card wherever you go</h4>
- <p> We want you to enjoy your travels. This is why we don’t charge any fees on purchases
-  while you’re abroad. We’ll even show you …</p>
-  <img src="images/image-confetti.jpg" alt="confetti">
- <small> By Claire Robinson</small>
-  <h4>Our invite-only Beta accounts are now live!</h4>
-<p>After a lot of hard work by the whole team, we’re excited to launch our closed beta.
-  It’s easy to request an invite through the site ...</p>
-
-
-
- <footer>
-   <div>
-     <img src="images/logo.svg" alt='logo'>
-   </div>
-<div class="icons-social">
-<img src="images/icon-instagram.svg" alt="instagram">
-<img src="images/icon-twitter.svg" alt="twitter">
-<img src="images/icon-youtube.svg" alt="youtube">
-<img src="images/icon-pinterest.svg" alt="pinterest">
-<img src="images/icon-facebook.svg" alt="facebook">
+<article class="article-container">
+  <h2 class="article-container__header">Latest Articles</h2>
+<div class="article-container__text">
+  <div class="article-container__item">
+    <img class="article-container__item-image" src="images/image-currency.jpg" alt="currency">
+    <small class="article-container__item-name">By Claire Robinson</small>
+   <h4 class="article-container__item-header"> Receive money in any currency with no fees</h4>
+   <p class="article-container__item-text"> The world is getting smaller and we’re becoming more mobile. So why should you be
+    forced to only receive money in a single …</p>
+  </div>
+  <div class="article-container__item">
+    <img class="article-container__item-image" src="images/image-restaurant.jpg" alt="restaurant">
+    <small class="article-container__item-name">By Wilson Hutton</small>
+    <h4 class="article-container__item-header">Treat yourself without worrying about money</h4>
+  <p class="article-container__item-text">Our simple budgeting feature allows you to separate out
+    your spending and set realistic limits each month. That
+    means you …</p>
+  </div>
+  <div class="article-container__item">
+    <img class="article-container__item-image" src="images/image-plane.jpg" alt="plane">
+    <small class="article-container__item-name">By Wilson Hutton</small>
+    <h4 class="article-container__item-header">Take your Easybank card wherever you go</h4>
+   <p class="article-container__item-text"> We want you to enjoy your travels. This is why we don’t charge any fees on purchases
+    while you’re abroad. We’ll even show you …</p>
+  </div>
+    <div class="article-container__item">
+      <img class="article-container__item-image" src="images/image-confetti.jpg" alt="confetti">
+   <small class="article-container__item-name"> By Claire Robinson</small>
+    <h4 class="article-container__item-header">Our invite-only Beta accounts are now live!</h4>
+  <p class="article-container__item-text">After a lot of hard work by the whole team, we’re excited to launch our closed beta.
+    It’s easy to request an invite through the site ...</p>
+    </div>
 </div>
-<div>
-  <ul>
-    <li> About Us</li>
-    <li>Contact</li>
-    <li>Blog</li>
-    <li>Careers</li>
-    <li> Support</li>
-    <li> Privacy Policy</li>
+
+</article>
+
+ <footer class="footer-nav__container">
+   <div class="footer-nav__logo">
+     <img class="footer-nav__logo-image" src="images/logo.svg" alt='logo'>
+
+
+<img class="icon"src="images/icon-instagram.svg" alt="instagram">
+<img class="icon" src="images/icon-twitter.svg" alt="twitter">
+<img class="icon" src="images/icon-youtube.svg" alt="youtube">
+<img class="icon" src="images/icon-pinterest.svg" alt="pinterest">
+<img class="icon" src="images/icon-facebook.svg" alt="facebook">
+</div>
+<div class="footer-nav__footer">
+  <ul class="footer-nav__items">
+    <li class="item"> About Us</li>
+    <li class="item">Contact</li>
+    <li class="item">Blog</li>
+  </ul>
+</div>
+  <div class="footer-nav__footer">
+<ul  class="footer-nav__items">
+    <li class="item">Careers</li>
+    <li class="item"> Support</li>
+    <li class="item"> Privacy Policy</li>
   </ul>
 </div>
 
 
-  <button>Request Invite</button>
+ <div class="footer-nav__elements">
+<button class="footer-nav__button">Request Invite</button>
 
-<p>© Easybank. All Rights Reserved</p>
+  <p class="footer-nav__text">© Easybank. All Rights Reserved</p>
+
+ </div>
  </footer>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+
 </body>
 </html>
