--- a/index.html
+++ b/index.html
@@ -35,18 +35,17 @@
         <img class="main-navigation__logo" src="images/logo.svg" alt="logo">
       </a>
       <ul class="main-navigation__menu ">
-        <a href="#" class="main-navigation__logo-link">
-          <li class="main-navigation__menu-item"> Home</li>
-        </a>
-        <a href="#about" class="main-navigation__logo-link">
-          <li class="main-navigation__menu-item"> About</li>
-        </a>
-        <a href="#contact" class="main-navigation__logo-link">
-          <li class="main-navigation__menu-item"> Contact</li>
-        </a>
-        <a href="#blog" class="main-navigation__logo-link">
-          <li class="main-navigation__menu-item">Blog </li>
-        </a>
+
+        <li class="main-navigation__menu-item"> <a href="#" class="main-navigation__logo-link">Home</a></li>
+
+
+        <li class="main-navigation__menu-item"> <a href="#about" class="main-navigation__logo-link"> About </a></li>
+
+        <li class="main-navigation__menu-item"> <a href="#contact" class="main-navigation__logo-link">Contact </a></li>
+
+
+        <li class="main-navigation__menu-item"> <a href="#blog" class="main-navigation__logo-link">Blog</a> </li>
+
         <li class="main-navigation__menu-item">Careers</li>
       </ul>
       <img class="main-navigation__hamburger" src="images/icon-hamburger.svg" alt="">
